--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/minishop.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="css/responsive.css" rel="stylesheet" type="text/css" media="all" />
     <!--Customizable CSS-->
     <link href="css/aos.css" rel="stylesheet" type="text/css" media="all" />
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
@@ -45,11 +46,7 @@
     .slick-next:before {
         color: #000;
     }
-  @media only screen and (max-width: 1280px) {
-    .headin{
-       font-size: 51px;
-    }
-  }
+ 
 </style>
 </head>
 <body class="goto-here">
@@ -88,12 +85,14 @@
     <section class="divider-wthree second">
 				<div class="container-fluid text-center row">
 
-            <div class="col-lg-4"><img src="images/makeindia.jpg" height="300px;" alt="Italian Trulli"></div>
+            <div class="col-lg-4"><img src="images/makeindia.jpg" class="makeindia" alt="Italian Trulli"></div>
 
 					  <div class="col-lg-8 pt-5">         
               <h1 class="headin text-right" data-aos="zoom-in">
                 <small>Every Single Part of the Product are</small> <br/>Made in India
                 </h1>
+                <br/>
+                <a link="#" class="cta-link">Learn More</a>
               </div>
 				</div>      
     </section>
@@ -135,6 +134,8 @@
               <h1 class="headin text-right" data-aos="zoom-in">
                 <small>We give our Customers a</small> <br/>FREE 6 MONTHS WARRANTY<br/><small>On all Type of Products.</small>
                 </h1>
+                 <br/>
+                <a link="#" class="cta-link text-right">Learn More</a>
               </div>
 					
 				</div>   
@@ -547,7 +548,7 @@
 						<a href="#" class="mouse-icon">
 							<div class="mouse-wheel"><span class="ion-ios-arrow-up"></span></div>
 						</a>
-                      <h2 class="ftco-heading-2 text-light text-center pt-md-2">Rich & Rag</h2>
+                  
 
 					</div>
 
@@ -556,7 +557,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Our Mission</h2>
+              <h2 class="ftco-heading-2">RICH & RAG</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class=""><a href="#"><span class="icon-twitter"></span></a></li>
