--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <small>Every Single Part of the Product are</small> <br/>Made in India
                 </h1>
                 <br/>
-                <a link="#" class="cta-link">Learn More</a>
+               <div class="d-flex align-items-end flex-column align-content-xl-end"><a link="#" class="cta-link">Learn More</a></div>
               </div>
 				</div>      
     </section>
@@ -135,7 +135,7 @@
                 <small>We give our Customers a</small> <br/>FREE 6 MONTHS WARRANTY<br/><small>On all Type of Products.</small>
                 </h1>
                  <br/>
-                <a link="#" class="cta-link text-right">Learn More</a>
+               <div class="d-flex align-items-end flex-column align-content-xl-end"><a link="#" class="cta-link">Learn More</a></div>
               </div>
 					
 				</div>   
@@ -557,7 +557,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">RICH & RAG</h2>
+              <h2 class="ftco-heading-2 text-light">RICH & RAG</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class=""><a href="#"><span class="icon-twitter"></span></a></li>
